# mxg-n5183b-python

./: .gitignore  LICENSE  README.md  config.example.ini  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: README.md  basic_usage.py  hardware_step_sweep.py  software_sweep_with_callback.py  using_config_file.py
src/mxg_n5183b/: __init__.py  cli.py  config.py  driver.py  exceptions.py
tests/: conftest.py  test_driver.py
